--- a/less/styles.less
+++ b/less/styles.less
@@ -3,6 +3,10 @@
 @import "about";
 @import "slider";
 @import "unpack";
+@import "projects";
+@import "contact";
+@import "footer";
+@import "animations";
 
 * {
     margin: 0;
