--- a/less/hamburger.less
+++ b/less/hamburger.less
@@ -10,7 +10,8 @@
     padding: 11px 0;
     position: fixed;
     right: 0;
-    top: 45vh;
+	top: 45vh;
+	z-index: 2;
 }
 .hamburger-menu,
 .hamburger-menu:after,
