--- a/less/about.less
+++ b/less/about.less
@@ -16,10 +16,9 @@
     align-items: center;
     justify-content: center;
     .sub {
-    font-family:"ff-good-headline-web-pro-ext";
     width: 12px;
     height: 13px;
-    color: #868782;
+    color: @text-color;
     font-size: 18px;
     font-weight: 400;
     text-transform: uppercase;
@@ -44,7 +43,7 @@
     p {
     width: 426px;
     height: 114px;
-    color: #868782;
+    color: @text-color;
     font-family: 'sofia-pro';
     font-size: 14px;
     font-weight: 400;
@@ -62,10 +61,9 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    font-family:"ff-good-headline-web-pro-ext";
     align-items: baseline;
     .role {
-        color: #868782;
+        color: @text-color;
         font-size: 16px;
         text-transform: uppercase;
         font-weight: 400;
@@ -74,7 +72,7 @@
     }
     .line {
             height: 1px;
-            background-color: #333d3c;
+            background-color: @main-color;
             margin-left: 3px;
             &.one {
                 width: 32px;
@@ -84,10 +82,9 @@
             }
     }
     .name {
-        color: #333d3c;
+        .title();
         font-size: 24px;
         font-weight: 600;
-        text-transform: uppercase;
         letter-spacing: 2.4px;
         margin-left: 3px;
     }
