--- a/less/slider.less
+++ b/less/slider.less
@@ -1,7 +1,7 @@
 .carusel {
     width: 70%;
     height: 220px;
-    background-color: rgba(255, 242, 221, 0.6);
+    background-color: @slider-backgrund;
     padding: 20px;
     margin: 50px 0;
     display: flex;
@@ -14,7 +14,7 @@
         p {
         height: 150px;
         opacity: 0.49;
-        color: #455251;
+        color: @slider-text-color;
         font-family: 'sofia-pro';
         font-size: 12px;
         font-weight: 400;
@@ -28,14 +28,12 @@
         }
     }
     .carusel-title {
+        .title();
         height: 150px;
         align-self: center;
         flex-basis: 45%;
-        color: #333d3c;
-        font-family: "ff-good-headline-web-pro-ext";
         font-weight: 600;
-        text-transform: uppercase;
-        border-left: 1px solid #333d3c;
+        border-left: 1px solid @main-color;
         padding-left: 8%; 
         display: flex;
         flex-direction: column;
