--- a/less/styles.less
+++ b/less/styles.less
@@ -7,7 +7,7 @@
 @import "contact";
 @import "footer";
 @import "animations";
-
+@import "variables";
 * {
     margin: 0;
     padding: 0;
@@ -18,6 +18,10 @@ a {
 }
 li {
     list-style: none;
+}
+html {
+    font-family:"ff-good-headline-web-pro-ext";
+    color: #333d3c;
 }
 .grid-parent {
     // width: 100%;
